<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="clip_vertical"
    android:orientation="vertical"
    android:layout_margin="40dp"
    tools:context=".main.ui.activity.MainActivity">

    <TextView
        android:layout_marginTop="80dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/FIO_User"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/user_names"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Regions_of_user"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/user_region"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/users_region"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/User_email"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="Емейл пользователя"
        android:textColor="@color/colorPrimary" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Дата регистрации: "
        android:textSize="10sp" />
    <TextView
        android:id="@+id/user_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="Дата пользователя"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/leave_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/leave_action"
        android:textColor="@android:color/background_light"
        android:textStyle="bold" />

</LinearLayout>